RESOLVED FIXED295752
REGRESSION(297077@main): [GTK][WPE] Cannot build with GCC 12 due to undefined std::monostate
https://bugs.webkit.org/show_bug.cgi?id=295752
Summary REGRESSION(297077@main): [GTK][WPE] Cannot build with GCC 12 due to undefined...
Adrian Perez
Reported 2025-07-10 16:55:04 PDT
In commit 297077@main we made the GTK and WPE ports use mpark::variant, but this broke the build with GCC 12.
Attachments
Adrian Perez
Comment 1 2025-07-10 17:00:47 PDT
EWS
Comment 2 2025-07-11 01:32:55 PDT
Committed 297254@main (5fc022e8cc7c): <https://commits.webkit.org/297254@main> Reviewed commits have been landed. Closing PR #47861 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-07-11 01:33:12 PDT
Note You need to log in before you can comment on or make changes to this bug.