REGRESSION(297077@main): [GTK][WPE] Cannot build with GCC 12 due to undefined std::monostate https://bugs.webkit.org/show_bug.cgi?id=295752

Reviewed by Alex Christensen.

* Source/WTF/wtf/Variant.h: Include <variant> for older versions of
  libstdc++ to make sure including the header brings std::monostate
  into scope.

Canonical link: https://commits.webkit.org/297254@main